# sayable

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  sayable.py
sayable/: __init__.py
tests/: test_sayable.py
